SutdentDAO, SubjectVO 수정

--- a/UniversityRegisterCourses/.settings/org.eclipse.core.resources.prefs
+++ b/UniversityRegisterCourses/.settings/org.eclipse.core.resources.prefs
@@ -5,3 +5,4 @@ encoding//src/control/JoinController.java=UTF-8
 encoding//src/control/JoinDAO.java=UTF-8
 encoding//src/control/StudentTabController.java=UTF-8
 encoding//src/model=UTF-8
+encoding/<project>=UTF-8
